# Looper

./: .env.example  .gitignore  Makefile  PROGRESS.md  README.md  docker-compose.yml  render.yaml
.claude/: settings.local.json
backend/: Dockerfile  Dockerfile.web  pyproject.toml  railway.json  requirements-dev.txt  requirements-web.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 228c03f0c7d9_initial_schema.py
backend/app/: config.py  main.py  scheduler_service.py
backend/app/api/: health.py  v1.py
backend/app/db/: base.py  engine.py  models.py  seed.py
backend/app/features/scans/: orchestrator.py
backend/app/matching/: cli.py  embedders.py  pipeline.py  rules.py
backend/app/notifications/: base.py  senders.py
backend/app/notifications/templates/: digest.html
backend/app/scraping/: cli.py  fetcher.py  renderer.py  strategies.py  types.py
backend/app/scraping/extractors/: ats.py  custom.py  html_heuristic.py  jsearch.py  jsonld.py  workday.py
backend/app/shared/: hashing.py  logging.py
backend/tests/integration/: test_golden_set.py
backend/tests/unit/: test_ats_slugs.py  test_extractors.py  test_hashing.py  test_rules.py  test_strategy_chain.py
docs/: 00-INDEX.md  01-prd.md  02-personas-user-stories.md  03-requirements.md  04-database-schema.md  05-api-specification.md  06-system-architecture.md  07-sequence-diagrams.md  08-wireframes.md  09-ui-design-system.md  10-development-roadmap.md  11-risk-analysis.md  12-testing-strategy.md  13-deployment-strategy.md  14-future-roadmap.md  15-global-discovery.md  (+2 more)
(+18 files in other folders)
